design.css
body {
    min-height: 100vh;
    margin: 0;
}

input {
    margin-bottom: 20px;
}

.sidebar {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 40%;
}

.library {
    height: 100vh;
    background-color: rgb(239, 161, 93);
    display: flex;
    flex-direction: row;
}

.library-row {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    flex-wrap: wrap;
    gap: 8px;
}

.book-card {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: rgb(195, 245, 214);
    height: 150px;
    width: 200px;
}

